--- a/.gitignore
+++ b/.gitignore
@@ -163,3 +163,4 @@ cython_debug/
 /tokenhsi/data/dataset_amass_climb/smpl_params/
 /tokenhsi/data/dataset_amass_climb/objects/
 joint_states.csv
+gui_out.txt
